--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -45,3 +45,9 @@
 .choice-btn:hover {
     background-color: rgba(255, 255, 255, 0.3);
 }
+
+body, html, #root {
+    font-family: "Forum", serif;    
+    font-weight: 400;
+    font-style: normal;
+}
