--- a/src/components/character-1/CharacterBox.module.css
+++ b/src/components/character-1/CharacterBox.module.css
@@ -2,14 +2,11 @@
     position: absolute;
     bottom: 0;
     left: 20px;
-    width: 300px;
-    height: 300px;
-    background: rgba(0, 0, 0, 0.5);
-    border: 2px solid #fff;
-    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     box-sizing: border-box;
+    max-width: 1080px;
+    max-height: 1920px;
 }
