--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -22,14 +22,14 @@
 
 .choice-container {
     position: absolute;
-    bottom: 70px;
-    left: 1280px;
+    top: 300px;
+    left: 700px;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
     gap: 10px;
     z-index: 3;
-    max-width: 175px;
+    max-width: 180px;
 }
 
 .choice-btn {
@@ -53,20 +53,19 @@ body, html, #root {
     font-style: normal;
 }
 
-.continueBtn {
+.continue-btn {
   position: absolute;
-  right: 30px;
-  bottom: 30px;
+  bottom: 40px;
+  right: 60px;
   background: rgba(255, 255, 255, 0.15);
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 10px 20px;
-  border-radius: 10px;
+  border: 2px solid #fff;
+  color: white;
+  padding: 10px 24px;
+  border-radius: 12px;
+  font-size: 18px;
   cursor: pointer;
-  font-size: 16px;
-  transition: background 0.2s ease;
+  transition: 0.2s;
 }
-
-.continueBtn:hover {
+.continue-btn:hover {
   background: rgba(255, 255, 255, 0.3);
 }
