--- a/src/components/Dialoguebox/DialogueBox.module.css
+++ b/src/components/Dialoguebox/DialogueBox.module.css
@@ -30,6 +30,7 @@
   color: #ffd700;
   font-size: 20px;
   margin-bottom: 10px;
+  margin-left: 80px;
 }
 
 .dialogueText {
@@ -37,4 +38,5 @@
   word-break: break-word;
   line-height: 1.4;
   font-size: 20px;
+  margin-left: 80px;
 }
