--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -23,8 +23,8 @@
 .choice-container {
     background-color: black;
     position: absolute;
-    top: 300px;
-    left: 750px;
+    top: 50%;
+    left: 50%;
     border-radius: 8px;
     transform: translateX(-50%);
     display: flex;
