--- a/src/components/character-1/CharacterBox.module.css
+++ b/src/components/character-1/CharacterBox.module.css
@@ -1,12 +1,9 @@
-.characterBox{
-    position: absolute;
-    bottom: 0;
-    left: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    box-sizing: border-box;
-    max-width: 1080px;
-    max-height: 1920px;
+.character {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw; /* растянуть на весь экран */
+  height: 100vh;
+  object-fit: contain; /* сохраняем пропорции персонажа */
+  pointer-events: none; /* клики проходят сквозь персонажа */ 
 }
