--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -1,7 +1,8 @@
 .mainMenuBg {
 	min-height: 100vh;
 	min-width: 100vw;
-	background: linear-gradient(135deg, #000000 0%, #000000 100%);
+	background: url('src/components/MainMenu/MainMenuBg.JPG') no-repeat center center;
+  	background-size: cover; /* или contain */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -12,13 +13,11 @@
 	font-size: 3rem;
 	font-family: 'Forum', serif;
 	color: #1b2c43;
-	margin-bottom: 2rem;
 	letter-spacing: 2px;
 	text-shadow: 0 2px 8px #000;
 }
 
 .mainMenuButtons {
-	
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
@@ -27,8 +26,8 @@
 }
 
 .mainMenuBtn {
-	background: url('./menuButtonBg.PNG') no-repeat center center;
-  background-size: cover; /* или contain */
+	background: url('src/components/MainMenu/menuButtonBg.PNG') no-repeat center center;
+  	background-size: cover; /* или contain */
 	color: #fff;
 	border: 2px solid #0b34a2;
 	padding: 16px 40px;
