фикс печатания и стиля

--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -39,7 +39,7 @@
 }
 .mainMenuBtn:hover {
 	/* background: url('./menuButtonBg.PNG'); */
-	background: #828ada;
+	background: #7eddcf;
 	color: #232526;
 	border-color: #fff;
 }
