--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -2,7 +2,7 @@
 	min-height: 100vh;
 	min-width: 100vw;
 	background: url('src/components/MainMenu/MainMenuBg.JPG') no-repeat center center;
-  	background-size: cover; /* или contain */
+  	background-size: cover; 
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -27,7 +27,7 @@
 
 .mainMenuBtn {
 	background: url('src/components/MainMenu/menuButtonBg.PNG') no-repeat center center;
-  	background-size: cover; /* или contain */
+  	background-size: cover; 
 	color: #fff;
 	border: 2px solid #0b34a2;
 	padding: 16px 40px;
