--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -1,7 +1,8 @@
+
 .mainMenuBg {
 	min-height: 100vh;
 	min-width: 100vw;
-	background: url('src/components/MainMenu/MainMenuBg.JPG') no-repeat center center;
+	background: url('@src/components/MainMenu/MainMenuBg.JPG') no-repeat center center;
   	background-size: cover; 
 	display: flex;
 	flex-direction: column;
