--- a/src/components/Dialoguebox/DialogueBox.module.css
+++ b/src/components/Dialoguebox/DialogueBox.module.css
@@ -27,7 +27,7 @@
 
 .dialogueName {
   font-weight: bold;
-  color: #ffd700;
+  color: #00f7ff;
   font-size: 20px;
   margin-bottom: 10px;
   margin-left: 80px;
