--- a/src/UI/GameUI.module.css
+++ b/src/UI/GameUI.module.css
@@ -1,4 +1,5 @@
 .gameuibtn {
+    font-family: "Forum", serif;
     background-color: rgba(7, 190, 144, 0.408);
     color: #fff;
     border: 1px solid #fff;
