--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -34,6 +34,7 @@
 }
 
 .choice-btn {
+  font-family: "Forum", serif;
     background-color: rgba(7, 190, 144, 0.408);
     color: #fff;
     border: 1px solid #fff;
@@ -55,6 +56,7 @@ body, html, #root {
 }
 
 .continue-btn {
+  font-family: "Forum", serif;
   position: absolute;
   bottom: 45px;
   right: 220px;
@@ -73,6 +75,7 @@ body, html, #root {
 
 /* кнопка "Назад" */
 .back-btn {
+  font-family: "Forum", serif;
   position: absolute;
   bottom: 45px;
   left: 50px;
